# audiosense-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  db.ts  docker-compose.build.yml  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  server.ts  tsconfig.build.json  tsconfig.json  vite.config.ts  worker.ts
.github/workflows/: docker-publish.yml
application/services/: knowledge-chat-service.ts  notebooks-service.ts  search-service.ts  settings-service.ts  tasks-service.ts  worker-service.ts  workspaces-service.ts
database/: bootstrap.ts  client.ts  config.ts
database/migrations/: 202603300001_baseline_schema.cjs  202604030001_api_tokens.cjs  202604050001_queue_state.cjs  202604100001_knowledge_conversations.cjs  202604100002_chunk_timestamps.cjs  202604100003_knowledge_associations.cjs  202604110001_chunk_parent_id.cjs  202604110002_add_association_unique.cjs  202604120001_workspaces_scope.cjs
database/repositories/: api-tokens-repository.ts  knowledge-conversations-repository.ts  notebooks-repository.ts  queue-state-repository.ts  summary-prompts-repository.ts  task-jobs-repository.ts  task-messages-repository.ts  tasks-repository.ts  user-settings-repository.ts  users-sessions-repository.ts  workspaces-repository.ts
docs/: architecture.md  feature.md
lib/: api-token-scopes.ts  association-service.ts  auth.ts  background-analysis.ts  chat-service.ts  config.ts  embeddings.ts  knowledge-chat-service.ts  knowledge-service.ts  llm.ts  provider-routing.ts  query-enhancer.ts  reranker.ts  search-index.ts  secure-settings.ts  settings.ts  subtitles.ts  summary-prompts.ts  task-helpers.ts  task-post-processing.ts  task-processor.ts  task-queue.ts  task-tag-suggestions.ts  task-types.ts  transcription.ts  upload-service.ts  user-settings-schema.ts  workspaces.ts
lib/ai/: embeddings.ts  llm.ts  query-enhancer.ts  reranker.ts
lib/audio-engine/: engine.ts  errors.ts  index.ts  llm-split.ts  local-runtime-catalog.ts  local-runtime.ts  markdown.ts  media.ts  normalize.ts  routing.ts  speaker-merge.ts  subtitle-rule-split.ts  subtitle-split-alignment.ts  subtitle-split-client.ts  subtitle-split-limits.ts  subtitle-split-llm-types.ts  subtitle-split-models.ts  subtitle-split-observability.ts  subtitle-split-pipeline.ts  subtitle-split-prepare.ts  subtitle-split-prompt.ts  subtitle-split-segments.ts  subtitle-split-text.ts  subtitle-split-validation.ts  types.ts
lib/auth/: auth.ts  secure-settings.ts
lib/search/: association-service.ts  background-analysis.ts  knowledge-chat-service.ts  knowledge-service.ts  search-index.ts
lib/settings/: settings.ts  user-settings-schema.ts
lib/shared/: logger.ts  text-encoding.ts
lib/tasks/: chat-service.ts  subtitles.ts  summary-prompts.ts  task-derived-state.ts  task-helpers.ts  task-post-processing.ts  task-processor.ts  task-queue.ts  task-tag-suggestions.ts  task-types.ts  upload-service.ts
lib/workspaces/: workspaces.ts
python-runtime/: .dockerignore  Dockerfile.cuda  README.md  pyproject.toml
python-runtime/src/local_audio_runtime/: __init__.py  audio_utils.py  backend_catalog.json  backends.py  catalog.py  config.py  diarization.py  live_engine.py  model_manager.py  parallel_diarize.py  realtime_engine.py  recorder.py  schemas.py  server.py  torchaudio_compat.py  vad.py
python-runtime/tests/: test_model_manager.py
routes/: api-tokens.ts  associations.ts  audio.ts  auth.ts  chat.ts  chunked-upload.ts  knowledge.ts  middleware.ts  notebooks.ts  search.ts  settings.ts  tasks.ts  workspaces.ts
scripts/: create-user.ts  db-migrate-make.ts  db-migrate-sqlite-to-pg.ts  db-migrate.ts  db-reindex-search.ts  db-rollback.ts  db-status.ts  delete-user.ts  list-users.ts
src/: App.tsx  KnowledgeBase.tsx  Notebook.tsx  SummaryPromptPage.tsx  TaskDetail.tsx  api.ts  index.css  main.tsx  types.ts
src/components/: ApiTokensSection.tsx  Calendar.tsx  Login.tsx  MarkdownContent.tsx  NotebookSidebar.tsx  TaskEditModal.tsx
src/contexts/: AppDataContext.tsx  AuthContext.tsx
src/hooks/: useAppData.ts  useAuth.ts  useKnowledgeChat.ts  useLibraryData.ts  useMentions.ts  useSettingsData.ts  useSseStream.ts  useTaskPolling.ts  useTasksData.ts  useWorkspacesData.ts
src/layouts/: AppShell.tsx
src/lib/: chunked-upload.ts  media.ts  taskSummary.ts  taskTagSuggestions.ts  utils.ts
src/pages/: RecordPage.tsx  SettingsPage.tsx  TasksPage.tsx  UploadPage.tsx
tests/: auth.test.ts  subtitle-split.test.ts  workspaces.test.ts
tests/helpers/: setup.ts
tests/unit/: config.test.ts  (+1 more)
(+108 files in other folders)
