[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audiosense-local-audio-runtime"
version = "0.1.0"
description = "Local STT and diarization runtime for AudioSense AI"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.42.0",
    "pydantic==2.11.7",
    "python-multipart==0.0.22",
    "numpy==2.0.2; python_version < '3.13'",
    "numpy==2.2.6; python_version >= '3.13'",
    "soundfile==0.13.1",
    "scipy==1.17.1",
]

[project.optional-dependencies]
whisper = [
    "faster-whisper==1.2.1",
]
whisperx = [
    "whisperx==3.4.2; python_version < '3.13'",
    "whisperx==3.7.2; python_version >= '3.13'",
    "torch==2.5.1; python_version < '3.13'",
    "torchaudio==2.5.1; python_version < '3.13'",
    "torchvision==0.20.1; python_version < '3.13'",
    "torch==2.10.0; python_version >= '3.13'",
    "torchaudio==2.10.0; python_version >= '3.13'",
    "torchvision==0.25.0; python_version >= '3.13'",
]
diarization = [
    "torch==2.5.1; python_version < '3.13'",
    "torchaudio==2.5.1; python_version < '3.13'",
    "torchvision==0.20.1; python_version < '3.13'",
    "torch==2.10.0; python_version >= '3.13'",
    "torchaudio==2.10.0; python_version >= '3.13'",
    "torchvision==0.25.0; python_version >= '3.13'",
    "pyannote.audio==3.3.2",
]
live = [
    "torch==2.5.1; python_version < '3.13'",
    "torch==2.10.0; python_version >= '3.13'",
    "webrtcvad==2.0.10",
    "silero-vad==6.2.1",
]
full = [
    "faster-whisper==1.2.1",
    "whisperx==3.4.2; python_version < '3.13'",
    "whisperx==3.7.2; python_version >= '3.13'",
    "torch==2.5.1; python_version < '3.13'",
    "torchaudio==2.5.1; python_version < '3.13'",
    "torchvision==0.20.1; python_version < '3.13'",
    "torch==2.10.0; python_version >= '3.13'",
    "torchaudio==2.10.0; python_version >= '3.13'",
    "torchvision==0.25.0; python_version >= '3.13'",
    "pyannote.audio==3.3.2",
    "webrtcvad==2.0.10",
    "silero-vad==6.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/local_audio_runtime"]
