[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audiosense-local-audio-runtime"
version = "0.1.0"
description = "Local STT and diarization runtime for AudioSense AI"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.42.0",
    "pydantic==2.11.7",
    "python-multipart==0.0.22",
    "numpy==2.2.6",
    "soundfile==0.13.1",
    "scipy==1.17.1",
]

[project.optional-dependencies]
whisper = [
    "ctranslate2==4.7.1",
    "faster-whisper==1.2.1",
]
whisperx = [
    "ctranslate2==4.7.1",
    "whisperx==3.8.2",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
]
diarization = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "pyannote.audio==4.0.4",
]
live = [
    "torch==2.8.0",
    "webrtcvad==2.0.10",
    "silero-vad==6.2.1",
]
full = [
    "ctranslate2==4.7.1",
    "faster-whisper==1.2.1",
    "whisperx==3.8.2",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "pyannote.audio==4.0.4",
    "webrtcvad==2.0.10",
    "silero-vad==6.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/local_audio_runtime"]
